<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MainMenu">

    <Button
        android:id="@+id/main_map_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_map" />

    <Button
        android:id="@+id/hobbit_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hobbit" />

    <Button
        android:id="@+id/lotr_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lord_of_the_rings" />

    <Button
        android:id="@+id/about_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/about" />

</LinearLayout>