<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".LotrMenu">

    <Button
        android:id="@+id/middle_earth_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/middle_earth" />

    <Button
        android:id="@+id/shire_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/shire" />

    <Button
        android:id="@+id/rohan_gondor_mordor_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/rohan_gondor_mordor" />

</LinearLayout>